# uRedis

./: Cargo.toml  Dockerfile  Dockerfile.test  README.md  api-spec.yaml
kubernetes/: deployment.yaml
src/: main.rs
src/services/: mod.rs
src/services/apis/: data.rs  delete.rs  mod.rs  read.rs  save.rs
src/services/db/: delete.rs  mod.rs  read.rs  save.rs
tests/: api.rs
