[package]
name = "uservice-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.20.6"
actix-web = { version="4.0.0-beta.10", features=["rustls"] }
dotenv = "0.15.0"
log = "0.4.17"
serde = "1.0.144"
serde_json = "1.0.85"
openssl = { version = "0.10", features = ["vendored"] }
deadpool-redis = { version = "0.10.2", features = ["serde"] }
redis = { version = "0.21", default-features = false, features = ["tokio-native-tls-comp"] }